Horizontal scroll bar no longer appears

--- a/IdentityApplication/scss/include/body.css
+++ b/IdentityApplication/scss/include/body.css
@@ -24,8 +24,6 @@ body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom
 
 .top-level-container {
   max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Set padding to keep content from hitting the edges */
